--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<h1>Welcome to Your Playlist</h1>
+	<h1>Welcome to Your Playlist Manager </h1>
 	<h3>Enter Details for a New Song Below: </h3>
 	<form action = "newSongServlet" method = "post">
 	
@@ -17,8 +17,10 @@
 	<input type = "submit" value = "Add Song">
 	
 	</form>
-	</br>
-	<a href = "displayPlaylistServlet"> Display or Edit Your Playlist</a>
-
+	<br />
+	<a href = "displayPlaylistServlet"> Display or Edit Your Songs</a>
+	
+	<a href = "displayPlaylistManagerServlet"> Display Your Playlists</a>
+	<a href = "newPlaylistServlet"> Make A New Playlist</a>
 </body>
 </html>
